[metadata]
name = graphenv
version = attr: src.VERSION
description =  Reinforcement learning on directed graphs
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    gym

[versioneer]
VCS = git
style = pep440
versionfile_source = graphenv/_version.py
versionfile_build = graphenv/_version.py
tag_prefix = graphenv-

[flake8]
max-line-length = 88
extend-ignore = E203