[metadata]
name = graphenv
description =  Reinforcement learning on directed graphs
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
  gym==0.26.2
  networkx==3.0
  ray[tune,rllib]==2.2.0
  numpy<1.24.0
  tqdm==4.64.1

[options.extras_require]
tensorflow = tensorflow
torch = torch
dev =
  torch
  tensorflow
  pytest

[flake8]
max-line-length = 88
extend-ignore = E203
